fix text-overflow course-item

--- a/css/main.css
+++ b/css/main.css
@@ -50,18 +50,11 @@ body {
 }
 
 .course-item__title {
-  width: 150px;
   margin-bottom: 15px;
 }
 
 .course-item__title p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  word-break: normal;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
